radix-transactions/tests/assets/manifest_parser_error_unexpected_eof_1.diag
error: unexpected end of file
  |
3 |     "lock_fee"
4 | ;
5 | CALL_METHOD
6 |     Address("component_sim1cptxxxxxxxxxfaucetxxxxxxxxx000527798379xxxxxxxxxhkrefh")
7 |     "some_method"
8 |     Enum<0u8>(
  |               ^ unexpected end of file
  |